[gd_scene load_steps=14 format=3 uid="uid://bqff8g2jk1rvb"]

[ext_resource type="Script" uid="uid://bgn6enkub33yh" path="res://Scripts/key.gd" id="1_bq4no"]
[ext_resource type="Texture2D" uid="uid://c1bd5oyaor0xc" path="res://Assets/Original/key-animation.png" id="1_on4dc"]
[ext_resource type="Texture2D" uid="uid://bf0w7sevx42hy" path="res://Assets/Tilemap/monochrome_tilemap_transparent.png" id="2_bq4no"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xpn81"]
atlas = ExtResource("1_on4dc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbu1d"]
atlas = ExtResource("1_on4dc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m676g"]
atlas = ExtResource("1_on4dc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yj11"]
atlas = ExtResource("1_on4dc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbnia"]
atlas = ExtResource("2_bq4no")
region = Rect2(187, 102, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0sa0"]
atlas = ExtResource("1_on4dc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_er8ml"]
atlas = ExtResource("1_on4dc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma87r"]
atlas = ExtResource("1_on4dc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a2dbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpn81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbu1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m676g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yj11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbnia")
}],
"loop": false,
"name": &"collect",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0sa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er8ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma87r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er8ml")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34se2"]
size = Vector2(12, 7)

[node name="Key" type="Area2D" groups=["key"]]
script = ExtResource("1_bq4no")

[node name="key_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a2dbh")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_34se2")

[node name="key_anim_timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="." to="." method="_player_collected_key"]
[connection signal="timeout" from="key_anim_timer" to="." method="_on_key_anim_timer_timeout"]
